--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "rails-erb-loader": "^3.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "webpack": "^3.4.1",
     "webpack-merge": "^4.0.0"
   },
